[Comments] Fix a layout issue caused by the posts page redesign (#964)

--- a/app/javascript/src/styles/views/posts/index/_index.scss
+++ b/app/javascript/src/styles/views/posts/index/_index.scss
@@ -32,7 +32,7 @@ body.c-posts.a-index, body.c-favorites.a-index {
   flex: 1; // See Exhibit A
 
   // 1. Searchbox
-  .search {
+  & > .search {
     grid-area: search;
 
     padding: 0.5rem 0.25rem;
@@ -46,7 +46,7 @@ body.c-posts.a-index, body.c-favorites.a-index {
   }
 
   // 2. Content
-  .content {
+  & > .content {
     display: flex; // See Exhibit A
     flex-flow: column;
 
@@ -82,7 +82,7 @@ body.c-posts.a-index, body.c-favorites.a-index {
   }
 
   // 3. Sidebar
-  .sidebar {
+  & > .sidebar {
     grid-area: sidebar;
 
     display: flex;
